Restructure the project into multiple crates in one workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
-[package]
-name = "byint"
-version = "0.1.0"
-authors = ["Miroslav Krýsl <mkrysl@protonmail.com>"]
-edition = "2018"
-description = "Bytecode interpreter with simple graphical visualizer."
-
-[dependencies]
+[workspace]
+members = [
+    "mvm",
+    "mvm-cli",
+    "mvm-gtk",
+]
