--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Miroslav Krýsl <mkrysl@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
-gtk = { version = "0.9.0", features = ["v3_24"] }
-gdk = "0.13.0"
-relm = "0.20.0"
-relm-derive = "0.20.0"
+#gtk = { version = "0.9.0", features = ["v3_24"] }
+#gdk = "0.13.0"
+#relm = "0.20.0"
+#relm-derive = "0.20.0"
 thiserror = "1.0.20"
 regex = "1.3.7"
 itertools = "0.9.0"
